--- a/mm/index.html
+++ b/mm/index.html
@@ -111,7 +111,9 @@
       <div class="slider__box  slider__box--1">
         <div class="container">
           <p>Super fast speed in the execution<br>of orders, with millions of orders<br>performed so far</p>
-          <a class="button  button--blue  button--slider" href="https://client.multiplymarket.com/en/members/register/real">For live assistance click here</a>
+          <a class="button  button--slider" href="https://client.multiplymarket.com/en/members/register/real">Open live account</a><br>
+          <a class="button  button--tv" href="#">For live assistance <span>click here</span></a>
+          <img src="img/tv-name.svg" width="130" alt="TeamViewer">
         </div>
       </div>
       <div class="slider__box  slider__box--2">
@@ -124,13 +126,15 @@
       <div class="slider__box  slider__box--3">
         <div class="container">
           <b>Embrace every opportunity to trade –<br>fast and reliable trade executions<br>with transparent pricing</b>
-          <a class="button  button--slider" href="https://client.multiplymarket.com/en/members/register/real">Open live account</a>
+          <a class="button  button--slider" href="https://client.multiplymarket.com/en/members/register/real">Open live account</a><br>
+          <a class="button  button--tv" href="#">For live assistance <span>click here</span></a>
+          <img src="img/tv-name.svg" width="130" alt="TeamViewer">
         </div>
       </div>
       <div class="slider__box  slider__box--4">
         <div class="container">
           <p>24 hour support by</p>
-          <img src="img/tv.svg" width="370">
+          <img src="img/tv.svg" width="370" alt="TeamViewer">
           <small>For live assistance</small>
           <a class="button  button--slider" href="https://client.multiplymarket.com/en/members/register/real">Click here</a>
         </div>
