--- a/borsa/index.html
+++ b/borsa/index.html
@@ -101,7 +101,80 @@
       </div>
     </div>
   </section>
-  
+  <section class="edge">
+    <div class="container">
+      <h1>Increase your chances to profit</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, nobis.</p>
+      <div class="edge__flex">
+        <div class="edge__box  edge__box--1">
+          <b>Multi-platform trading</b>
+        </div>
+        <div class="edge__box  edge__box--2">
+          <b>Trading signals</b>
+        </div>
+        <div class="edge__box  edge__box--3">
+          <b>Algo trading</b>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="contact">
+    <div class="contact__left"></div>
+    <div class="contact__right">
+      <h3>Contact Us</h3>
+      <form class="form">
+        <div class="form__inner">
+          <div class="form__label">
+            <label for="name">Full Name:</label>
+            <label for="subject">Subject:</label>
+            <label for="email">Email:</label>
+            <label for="message">Your message:</label>
+          </div>
+          <div class="form__input">
+            <input id="name" type="text">
+            <input id="subject" type="text">      
+            <input id="email" type="email">      
+            <textarea id="message" rows="8" cols="80"></textarea>
+          </div>
+        </div>
+        <button class="button" type="button">Submit</button>
+      </form>
+    </div>
+  </section>
+  <section class="app">
+    <div class="container">
+      <div class="app__flex">
+        <div class="app__left">
+          <h3>Trade now</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro, minima illum dignissimos in necessitatibus debitis aspernatur modi. Labore, ratione, nemo.</p>
+          <a class="app__apple" href="#"></a>
+          <a class="app__google" href="#"></a>
+        </div>
+        <img src="img/app-right.png">
+      </div>
+    </div>
+  </section>
+  <section class="comment">
+    <div class="container">
+      <div class="comment__slider">
+        <div class="comment__box">
+          <img src="img/comment-1.jpg" alt="">
+        </div>
+        <div class="comment__box">
+          <img src="img/comment-1.jpg" alt="">
+        </div>
+        <div class="comment__box">
+          <img src="img/comment-1.jpg" alt="">
+        </div>
+        <div class="comment__box">
+          <img src="img/comment-1.jpg" alt="">
+        </div>
+        <div class="comment__box">
+          <img src="img/comment-1.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
   <script src="js/jquery.min.js"></script>
   <script src="js/slick/slick.min.js"></script>
   <script src="js/slider.js"></script>
