--- a/borsa/index.html
+++ b/borsa/index.html
@@ -156,20 +156,32 @@
   </section>
   <section class="comment">
     <div class="container">
+      <h3>Feedback from investors</h3>
       <div class="comment__slider">
         <div class="comment__box">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, unde.</p>
+          <img src="img/comment-1.jpg" alt="">
+          <b>John Dou</b><br>
+          <small>Investor</small>
+        </div>
+        <div class="comment__box">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, culpa!</p>
           <img src="img/comment-1.jpg" alt="">
         </div>
         <div class="comment__box">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro, officiis?</p>
           <img src="img/comment-1.jpg" alt="">
         </div>
         <div class="comment__box">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, expedita?</p>
           <img src="img/comment-1.jpg" alt="">
         </div>
         <div class="comment__box">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero, quas!</p>
           <img src="img/comment-1.jpg" alt="">
         </div>
         <div class="comment__box">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero, quas!</p>
           <img src="img/comment-1.jpg" alt="">
         </div>
       </div>
