--- a/borsa/index.html
+++ b/borsa/index.html
@@ -166,27 +166,87 @@
         </div>
         <div class="comment__box">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, culpa!</p>
-          <img src="img/comment-1.jpg" alt="">
+          <img src="img/comment-2.jpg" alt="">
+          <b>John Dou</b><br>
+          <small>Investor</small>
         </div>
         <div class="comment__box">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro, officiis?</p>
-          <img src="img/comment-1.jpg" alt="">
+          <img src="img/comment-3.jpg" alt="">
+          <b>John Dou</b><br>
+          <small>Investor</small>
         </div>
         <div class="comment__box">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, expedita?</p>
           <img src="img/comment-1.jpg" alt="">
+          <b>John Dou</b><br>
+          <small>Investor</small>
         </div>
         <div class="comment__box">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero, quas!</p>
           <img src="img/comment-1.jpg" alt="">
+          <b>John Dou</b><br>
+          <small>Investor</small>
         </div>
         <div class="comment__box">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero, quas!</p>
           <img src="img/comment-1.jpg" alt="">
+          <b>John Dou</b><br>
+          <small>Investor</small>
         </div>
       </div>
     </div>
   </section>
+  <section class="payment">
+    <div class="container">
+      <div class="payment__flex">
+        <div class="payment__box  payment__box--wm"></div>
+        <div class="payment__box  payment__box--sofort"></div>
+        <div class="payment__box  payment__box--ae"></div>
+        <div class="payment__box  payment__box--neteller"></div>
+        <div class="payment__box  payment__box--ideal"></div>
+        <div class="payment__box  payment__box--skrill"></div>
+        <div class="payment__box  payment__box--visa"></div>
+        <div class="payment__box  payment__box--master"></div>
+        <div class="payment__box  payment__box--bank"></div>
+      </div>
+    </div>
+  </section>
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__flex">
+        <ul>
+          <b>Assets</b>
+          <li><a href="templates/forex.html">Forex</a></li>
+          <li><a href="templates/futures.html">Futures</a></li>
+          <li><a href="templates/commodities.html">Commodities</a></li>
+          <li><a href="templates/indices.html">Indices</a></li>
+          <li><a href="templates/stocks.html">Stocks</a></li>
+        </ul>
+        <ul>
+          <b>About Us</b>
+          <li><a href="templates/terms.html">Terms and Conditions</a></li>
+          <li><a href="templates/risk.html">Risk Disclosure</a></li>
+          <li><a href="templates/privacy.html">Privacy Policy</a></li>
+          <li><a href="templates/anti-money.html">Anti-Money Laundering</a></li>
+          <li><a href="templates/kyc.html">KYC Policy</a></li>
+        </ul>
+        <ul>
+          <b>Support</b>
+          <li><a href="">Support</a></li>
+          <li><a href="">Contact Us</a></li>
+        </ul>
+        <ul>
+          <b>Algo Trading</b>
+          <li><a href="templates/faq.html">Algo Trading</a></li>
+        </ul>
+      </div>
+      <hr>
+      <h1>Risk Warning:</h1>
+      <p>Forex and “Contract for Differences (CFDs) are usually leveraged products. Trading in Forex and Over-The-Counter (OTC) CFDs related to commodities carry a high level of risk and can result in the loss of all of your investment. As such, Forex and such CFDs may not be appropriate for all investors. You should not invest money that you cannot afford to lose. Before deciding to trade, you should become aware of all the risks associated with Forex and OTC CFD trading, and seek advice from an independent and suitably licensed financial advisor”. Past performance does not constitute a reliable indicator of future results. Future forecasts do not constitute a reliable indicator of future performance.</p>
+    </div>
+    <p class="footer__copyright">© 2017 ALL right reserved BorsaPro</p>
+  </footer>
   <script src="js/jquery.min.js"></script>
   <script src="js/slick/slick.min.js"></script>
   <script src="js/slider.js"></script>
