--- a/mm/index.html
+++ b/mm/index.html
@@ -112,7 +112,7 @@
         <div class="container">
           <p>Super fast speed in the execution<br>of orders, with millions of orders<br>performed so far</p>
           <a class="button  button--slider" href="https://client.multiplymarket.com/en/members/register/real">Open live account</a><br>
-          <a class="button  button--tv" href="#">For live assistance <span>click here</span></a>
+          <a class="button  button--tv" href="https://get.teamviewer.com/vcpgxbt">For live assistance <span>click here</span></a>
           <img src="img/tv-name.svg" width="130" alt="TeamViewer">
         </div>
       </div>
@@ -127,7 +127,7 @@
         <div class="container">
           <b>Embrace every opportunity to trade –<br>fast and reliable trade executions<br>with transparent pricing</b>
           <a class="button  button--slider" href="https://client.multiplymarket.com/en/members/register/real">Open live account</a><br>
-          <a class="button  button--tv" href="#">For live assistance <span>click here</span></a>
+          <a class="button  button--tv" href="https://get.teamviewer.com/vcpgxbt">For live assistance <span>click here</span></a>
           <img src="img/tv-name.svg" width="130" alt="TeamViewer">
         </div>
       </div>
