--- a/mm/index.html
+++ b/mm/index.html
@@ -136,7 +136,7 @@
           <p>24 hour support by</p>
           <img src="img/tv.svg" width="370" alt="TeamViewer">
           <small>For live assistance</small>
-          <a class="button  button--slider" href="https://client.multiplymarket.com/en/members/register/real">Click here</a>
+          <a class="button  button--slider" href="https://get.teamviewer.com/vcpgxbt">Click here</a>
         </div>
       </div>
     </div>
