--- a/mb/index.html
+++ b/mb/index.html
@@ -31,7 +31,7 @@
       </div>  
     </nav>
   </header>
-  <div class="title">
+  <section class="title">
     <div class="container">
       <h1>Инвестиции<br>нового поколения</h1>
       <p>Испытайте простую и доступную всем<br>инновационную технологию<br>инвестирования</p>
@@ -43,6 +43,99 @@
         <span class="title__mouse"></span>
       </button>
     </div>
-  </div>
+  </section>
+  <section class="counter">
+    <div class="container">
+      <div class="counter__investor">
+        <img src="img/counter-investor.svg" width="50" alt="">
+        <span>243</span>
+        <p>Инвестора<br>онлайн</p>
+      </div>
+        <hr>
+      <div class="counter__flex">
+        <div class="counter__client">
+          <img src="img/counter-client.png" alt="">
+          <span>21 230</span> 
+          <p>Зарегистрированных<br>клиентов</p>
+        </div>
+        <div class="counter__transactions">
+          <img src="img/counter-transactions.svg" width="47" alt="">
+          <span>23 871 318$</span> 
+          <p>Общий объем<br>транзакций</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="price">
+    <div class="container">
+      <div class="price__flex">
+        <div class="price__left">
+          <img src="img/price-bitcoin.png" alt="Bitcoin">
+          <p class="price__title">Курс Bitcoin в реальном<br>времени</p>
+          <time class="price__time">09.03.2018</time>
+          <p class="price__course">1 BTC = <span>8943.2377024$</span></p>
+          <div class="price__counter">
+            <span>8</span>
+            <span>9</span>
+            <span>4</span>
+            <span>3</span>
+            <span>2</span>
+          </div>
+        </div>
+        <div class="price__right">
+          <b>Цена биткоина<br>меняется каждую минуту!</b>
+          <b>И на этом можно заработать!</b>
+          <p>Выбирайте любой актив из сотен доступных и<br>зарабатывайте на его ценовом колебании!</p>
+          <div class="price__select">
+            <div class="price__flex">
+              <p class="price__name">Bitcoin</p>
+              <p class="price__value">8943.2377024$</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="steps">
+    <div class="container">
+      <h1>Инвестиция всего в 3 простых шага</h1>
+      <div class="steps__flex">
+        <div class="steps__box">
+          <small>Шаг 1</small>
+          <img src="img/step-1.png">
+          <b>Выбор актива</b>
+          <p>Выбирайте интересующий вас актив</p>
+        </div>
+        <div class="steps__box">
+          <small>Шаг 2</small>
+          <img src="img/step-2.png">
+          <b>Инвестиция</b>
+          <p>Укажите сумму, которую вы готовы вложить</p>
+        </div>
+        <div class="steps__box">
+          <small>Шаг 3</small>
+          <img src="img/step-3.png">
+          <b>Выше или ниже?</b>
+          <p>Спрогнозируйте поднимется ли цена актива или упадет</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="profit">
+    <div class="container">
+      <p>В случае правильного прогноза<br><span>прибыль составит до 90%</span> от вложения</p>
+    </div>
+  </section>
+  
+  <section class="ssl">
+    <div class="container">
+      <img src="img/ssl-shield.png">
+      <p class="ssl__title">Счета инвесторов находятся под высочайшим уровнем безопасности</p>
+      <p class="ssl__text">Мы используем лучшее программное обеспечение для шифрования личной и финансовой информации, включая шифрование SSL через HTTPS защищенные веб-протоколы.Кроме того, средства всех инвесторов хранятся на отдельных счетах. Это значит, что без вашего согласия никто не сможет получить к ним доступ. Все счета инвесторов застрахованы от непредвиденных ситуаций, благодаря резервному страховочному фонду.</p>
+      <div class="ssl__flex">
+        
+      </div>
+    </div>
+  </section>
 </body>
 </html>
