--- a/mb/index.html
+++ b/mb/index.html
@@ -137,5 +137,45 @@
       </div>
     </div>
   </section>
+  
+  <section class="easy">
+    <div class="container">
+      <img src="img/easy-target.svg" width="110">
+      <p class="easy__title">С нами инвестировать просто, удобно и прибыльно!</p>
+      <p class="easy__text">Тысячи инвесторов со всего мира прямо сейчас<br>получают доход!</p>
+      <a class="button  button--red" href="#">Открыть счет</a>
+    </div>
+  </section>
+  <section class="type">
+    <div class="container">
+      <h1>Лучшие типы счетов</h1>
+      <div class="type__flex">
+        <div class="type__box">
+          <header>
+            <h2>Silver</h2>
+          </header>
+          <p>Минимальная сумма к<br>пополнению</p>
+          <b>500$</b>
+          <a class="button  button--unclick" href="#">Открыть счет</a>
+        </div>
+        <div class="type__box  type__box--center">
+          <header>
+            <h2>Gold</h2>
+          </header>
+          <p>Минимальная сумма к<br>пополнению</p>
+          <b>10 000$</b>
+          <a class="button  button--unclick" href="#">Открыть счет</a>
+        </div>
+        <div class="type__box">
+          <header>
+            <h2>Platinum</h2>
+          </header>
+          <p>Минимальная сумма к<br>пополнению</p>
+          <b>50 000$</b>
+          <a class="button  button--unclick" href="#">Открыть счет</a>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
