--- a/mb/index.html
+++ b/mb/index.html
@@ -164,7 +164,7 @@
           </header>
           <p>Минимальная сумма к<br>пополнению</p>
           <b>10 000$</b>
-          <a class="button  button--unclick" href="#">Открыть счет</a>
+          <a class="button  button--click" href="#">Открыть счет</a>
         </div>
         <div class="type__box">
           <header>
@@ -175,7 +175,14 @@
           <a class="button  button--unclick" href="#">Открыть счет</a>
         </div>
       </div>
+      <hr>
+      <a class="button  button--unclick" href="#">Подробнее о типах счетов</a>
     </div>
   </section>
+  <footer class="footer">
+    <div class="container">
+      .
+    </div>
+  </footer>
 </body>
 </html>
