--- a/index.html
+++ b/index.html
@@ -109,6 +109,45 @@
 					</div>
 				</div>
 			</div>
+			
+			<div class="row">
+				<div class="col-xs-12 col-sm-4 col-md-4">
+					<div class="grid wow zoomIn">
+						<figure class="effect-bubba">
+							<img src="assets/images/TGI.PNG" alt=""/>
+							<figcaption>
+								<h2>TGI</h2>
+								<p><a href="tgi/index-ru.html" class="work-a" target="_blank">Посмотреть</a></p>
+							</figcaption>			
+						</figure>
+					</div>
+				</div>
+				
+				<div class="col-xs-12 col-sm-4 col-md-4">
+					<div class="grid wow zoomIn">
+						<figure class="effect-bubba">
+							<img src="assets/images/BeBrokers.PNG" alt=""/>
+							<figcaption>
+								<h2>BeBrokers</h2>
+								<p><a href="https://be-brokers.com/" class="work-a" target="_blank">Посмотреть</a></p>
+							</figcaption>			
+						</figure>
+					</div>
+				</div>
+				
+				<div class="col-xs-12 col-sm-4 col-md-4">
+					<div class="grid wow zoomIn">
+						<figure class="effect-bubba">
+							<img src="assets/images/MultiplyMarket.PNG" alt=""/>
+							<figcaption>
+								<h2>MultiplyMarket</h2>
+								<p><a href="https://multiplymarket.com/" class="work-a" target="_blank">Посмотреть</a></p>
+							</figcaption>			
+						</figure>
+					</div>
+				</div>
+			</div>
+			
 			<div class="row">
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<div class="grid wow zoomIn">
