--- a/mb/index.html
+++ b/mb/index.html
@@ -6,6 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>MasterBinary</title>
   <link rel="stylesheet" href="css/style.min.css">
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="194x194" href="img/favicon/favicon-194x194.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="img/favicon/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#051c4f">
+  <meta name="msapplication-TileColor" content="#051c4f">
+  <meta name="msapplication-TileImage" content="img/favicon/mstile-144x144.png">
+  <meta name="theme-color" content="#051c4f">
 </head>
 <body>
   <header class="header">
@@ -133,7 +144,12 @@
       <p class="ssl__title">Счета инвесторов находятся под высочайшим уровнем безопасности</p>
       <p class="ssl__text">Мы используем лучшее программное обеспечение для шифрования личной и финансовой информации, включая шифрование SSL через HTTPS защищенные веб-протоколы.Кроме того, средства всех инвесторов хранятся на отдельных счетах. Это значит, что без вашего согласия никто не сможет получить к ним доступ. Все счета инвесторов застрахованы от непредвиденных ситуаций, благодаря резервному страховочному фонду.</p>
       <div class="ssl__flex">
-        
+        <img src="img/payment-1.png">
+        <img src="img/payment-2.png">
+        <img src="img/payment-3.png">
+        <img src="img/payment-4.png">
+        <img src="img/payment-5.png">
+        <img src="img/payment-6.png">
       </div>
     </div>
   </section>
@@ -154,6 +170,7 @@
           <header>
             <h2>Silver</h2>
           </header>
+          <hr>
           <p>Минимальная сумма к<br>пополнению</p>
           <b>500$</b>
           <a class="button  button--unclick" href="#">Открыть счет</a>
@@ -170,6 +187,7 @@
           <header>
             <h2>Platinum</h2>
           </header>
+          <hr>
           <p>Минимальная сумма к<br>пополнению</p>
           <b>50 000$</b>
           <a class="button  button--unclick" href="#">Открыть счет</a>
@@ -181,7 +199,7 @@
   </section>
   <footer class="footer">
     <div class="container">
-      .
+      
     </div>
   </footer>
 </body>
