--- a/forex24/index.html
+++ b/forex24/index.html
@@ -4,155 +4,17 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Forex24</title>
-  <link rel="stylesheet" href="css/style.css">
+  <title>Mobile - Forex24</title>
 </head>
 <body>
-  <!-- <div id="img"> -->
-	<!-- <div id="DIV_57"> -->
-		<!-- <article id="ARTICLE_58"> -->
-			<!-- <div id="DIV_59"> -->
-				<!-- <div id="DIV_60"> -->
-					<!-- <div id="DIV_61"> -->
-						<!-- <div id="DIV_62"> -->
-							<!-- <div id="DIV_1"> -->
-								<div id="DIV_2" class="img">
-									<div id="DIV_3" class="marker marker-1">
-										1
-									</div>
-									<div id="DIV_4" class="marker marker-2">
-										2
-									</div>
-									<div id="DIV_5" class="marker marker-3">
-										3
-									</div>
-									<div id="DIV_6" class="marker marker-4">
-										4
-									</div>
-									<div id="DIV_7" class="marker marker-5">
-										5
-									</div>
-									<div id="DIV_8" class="marker marker-6">
-										6
-									</div>
-									<div id="DIV_9" class="marker marker-7">
-										7
-									</div>
-									<div id="DIV_10" class="marker marker-8">
-										8
-									</div>
-                  <img class="screenshot" src="img/mockup.png" id="IMG_11" alt='' />
-								</div>
-								<!-- <div id="DIV_12"> -->
-									<div id="DIV_13" class="callout callout-1">
-										<div id="DIV_14">
-											<h4 id="H4_15">
-												1
-											</h4>
-											<p id="P_16">
-                        You can filter instruments using keyword or securities group or set your own asset classes.
-											</p>
-											<div id="DIV_17">
-											</div>
-										</div>
-									</div>
-									<div id="DIV_18">
-										<div id="DIV_19">
-											<h4 id="H4_20">
-												2
-											</h4>
-											<p id="P_21">
-                        By just optimizing the smart one-click trading mode, traders can set size, TP/SL, and also open orders with exceptional speed.
-											</p>
-											<div id="DIV_22">
-											</div>
-										</div>
-									</div>
-								<!-- </div> -->
-								<div id="DIV_23">
-									<div id="DIV_24">
-										<div id="DIV_25">
-											<h4 id="H4_26">
-												3
-											</h4>
-											<p id="P_27">
-                        You can choose any instrument by clicking on the star: view them easily by selecting instruments group “Favorite”
-											</p>
-											<div id="DIV_28">
-											</div>
-										</div>
-									</div>
-									<div id="DIV_29">
-										<div id="DIV_30">
-											<h4 id="H4_31">
-												4
-											</h4>
-											<p id="P_32">
-                        Excellent  HTML5 charting which includes five chart types, vector drawings, and 100+ studies.
-											</p>
-											<div id="DIV_33">
-											</div>
-										</div>
-									</div>
-								</div>
-								<div id="DIV_34">
-									<div id="DIV_35">
-										<div id="DIV_36">
-											<h4 id="H4_37">
-												5
-											</h4>
-											<p id="P_38">
-                        Keep your eyes on the market trend and your open positions at the same time! Open and close trades directly from the chart.
-											</p>
-											<div id="DIV_39">
-											</div>
-										</div>
-									</div>
-									<div id="DIV_40">
-										<div id="DIV_41">
-											<h4 id="H4_42">
-												6
-											</h4>
-											<p id="P_43">
-                        ChartDock gives traders the ability to analyze up to 10 charts simultaneously. Charts can either be manually arranged or automatically arranged at the click of a button.
-											</p>
-											<div id="DIV_44">
-											</div>
-										</div>
-									</div>
-								</div>
-								<div id="DIV_45">
-									<div id="DIV_46">
-										<div id="DIV_47">
-											<h4 id="H4_48">
-												7
-											</h4>
-											<p id="P_49">
-                        With advanced ‘Close All’ control, traders can close any transaction:  profitable, losing, buy, sell and open positions with just one click.
-											</p>
-											<div id="DIV_50">
-											</div>
-										</div>
-									</div>
-									<div id="DIV_51">
-										<div id="DIV_52">
-											<h4 id="H4_53">
-												8
-											</h4>
-											<p id="P_54">
-                        The summary tab shows traders aggregated positions grouped by symbol, allowing users to clearly see total P/L recorded for a particular instrument.											</p>
-											<div id="DIV_55">
-											</div>
-										</div>
-									</div>
-								</div>
-							<!-- </div> -->
-						<!-- </div> -->
-					<!-- </div> -->
-				<!-- </div> -->
-			<!-- </div> -->
-		<!-- </article> -->
-	<!-- </div> -->
-<!-- </div> -->
+  <section class="mobile">
+    <div class="container">
+      <h1>Mobile</h1>
+      <p>Forex24 Mobile offers your traders the same account capabilities as Forex24 Web. They can view their account status, closed trades, place and monitor pending orders, execute and modify live trades, and more!</p>
+      <div class="mobile__flex">
+        <img src="img/mockup.png" alt="">
+      </div>
+    </div>
+  </section>
 </body>
 </html>
